--- a/07_projects/style.css
+++ b/07_projects/style.css
@@ -51,7 +51,10 @@ button:hover{
     margin: 1rem 0;
     border-radius: 10px;
 }
-
+.async-heading{
+    color: white;
+    text-align: center;
+}
 /* Color Picker css */
 .color-picker-container{
     width: 40rem;
